Overflows fixed

--- a/docs/_sass/_banners.scss
+++ b/docs/_sass/_banners.scss
@@ -23,8 +23,8 @@
   }
 
   .downloads {
-    width: 95%;
     border-spacing: 10px 5px;
+    margin-right: -10px;
 
     td {
       background-color: rgba(255, 192, 0, 0.4);
