--- a/docs/_sass/_custom.scss
+++ b/docs/_sass/_custom.scss
@@ -14,6 +14,7 @@ h1, h2, h3, h4, h5 {
   width: 100%;
   max-width: 960px;
   margin: auto;
+  box-sizing: border-box;
   @media screen and (max-width: 960px)   {
     padding: 0px 10px;
   }
